# CARSGuard

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  streamlit_app.py
configs/: default.yaml  preprocessing.yaml  references.yaml  scoring.yaml
data/: README.md
data/raw/real_cars/extracted_hepg2/: hepg2_pixel_100_100.csv  hepg2_pixel_125_80.csv  hepg2_pixel_150_150.csv  hepg2_pixel_50_50.csv  hepg2_pixel_75_100.csv
data/raw/real_cars/extracted_toluene/: toluene_1ms_cars_spec_000.csv  toluene_1ms_cars_spec_010.csv  toluene_1ms_cars_spec_025.csv  toluene_1ms_cars_spec_050.csv  toluene_1ms_cars_spec_075.csv
docs/: index.md  integration.md  preprocessing.md  references.md  reports.md  scoring.md
docs/assets/: README.md
examples/: README.md  example_validation_report.json
scripts/: README.md  build_benchmark_table.py  build_reference_profiles.py  check_markdown_links.py  export_report.py  extract_features.py  extract_hepg2_spectra.py  extract_toluene_spectra.py  inspect_mat_file.py  plot_bcars_mat.py  plot_hepg2_cube.py  plot_toluene_mat.py  preprocess_dataset.py  score_dataset.py  score_single_spectrum.py
src/carsguard/: __init__.py
src/carsguard/core/: config.py  dataset.py  exceptions.py  spectrum.py
src/carsguard/features/: background.py  feature_vector.py  intensity.py  morphology.py  peaks.py  smoothness.py  widths.py
src/carsguard/integration/: carsbench_adapter.py  upload_api.py
src/carsguard/io/: benchmark_table.py  loaders.py  writers.py
src/carsguard/physics/: __init__.py  constraints.py  sanity.py
src/carsguard/preprocessing/: axis.py  baseline.py  filtering.py  normalization.py  validation.py
src/carsguard/references/: cars_reference.py  nearest_neighbors.py  raman_reference.py  statistics.py
src/carsguard/reports/: recommendations.py  report_builder.py  serializers.py
src/carsguard/scoring/: artifact_detection.py  bcars_realism.py  confidence.py  raman_consistency.py  summary.py
src/carsguard/utils/: helpers.py  logging.py  plotting.py
tests/: test_carsbench_adapter.py  test_config.py  test_features.py  test_loaders.py  test_preprocessing.py  test_scoring.py
