[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carsguard"
version = "0.1.0"
description = "Validation framework for physical realism and Raman consistency in CARS/BCARS spectra."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Rola Houhou" },
]

keywords = [
  "CARS",
  "BCARS",
  "Raman spectroscopy",
  "coherent Raman",
  "spectroscopy",
  "validation",
  "quality control",
  "artifact detection",
  "scientific Python",
  "signal processing",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

app = [
  "streamlit>=1.30",
]

notebooks = [
  "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/rhouhou/CARSGuard"
Issues = "https://github.com/rhouhou/CARSGuard/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = [
  "E501",  # allow long scientific/report strings for now
  "B905",  # do not require zip(strict=...) for Python 3.9 compatibility
]
